@startuml

title __PLAYER's Class Diagram__\n

  package cz.kksffn {
    package player {
      class cz.kksffn.player.AI {
          + AI()
          + getCoordinatesOfShips()
          + getGuess()
          + updateGuesses()
          + updateGuesses()
          - setName()
      }
    }
  }
  

  package cz.kksffn {
    package player {
      abstract class cz.kksffn.player.APlayer {
          ~ coordinatesOfShips : HashMap<ShipName, ArrayList<Integer>>
          ~ isHuman : boolean
          ~ name : String
          {abstract} + getCoordinatesOfShips()
          {abstract} + getGuess()
          + getName()
          + isHuman()
          + updateGuesses()
          + updateGuesses()
      }
    }
  }
  

  package cz.kksffn {
    package player {
      class cz.kksffn.player.Human {
          + Human()
          + getCoordinatesOfShips()
          + getGuess()
          - setName()
          - setShips()
      }
    }
  }
  

  package cz.kksffn {
    package player {
      interface cz.kksffn.player.IPlayer {
          {abstract} + getCoordinatesOfShips()
          {abstract} + getGuess()
          {abstract} + getName()
          {abstract} + isHuman()
          {abstract} + updateGuesses()
          {abstract} + updateGuesses()
      }
    }
  }
  

  package cz.kksffn {
    package player {
      interface cz.kksffn.player.IStrategy {
          {abstract} + findCoordinates()
          {abstract} + updateGuesses()
          {abstract} + updateGuesses()
      }
    }
  }
  

  package cz.kksffn {
    package player {
      class cz.kksffn.player.Strategy {
          - allGuesses : ArrayList<Integer>
          - allHits : ArrayList<Integer>
          - lastHit : int
          - lastHits : ArrayList<Integer>
          - myChances : int
          - myGuess : int
          - numberOfNotRandomMoves : int
          - rand : Random
          - sunkShips : ArrayList<ShipName>
          + findCoordinates()
          + updateGuesses()
          + updateGuesses()
          - addTheRightCells()
          - addToGuesses()
          - alreadyGuessed()
          - doNotGuessFourth()
          - doNotGuessThird()
          - isNotOnBottom()
          - isNotOnTheLeftEdge()
          - isNotOnTheRightEdge()
          - isNotOnTheTop()
          - shootNextToFirstHitAgain()
          - thinkOfWhatNotToGuess()
          - tryNearestCells()
          - tryToSinkCarrier()
          - updateGuesses()
      }
    }
  }
  

  cz.kksffn.player.AI -up-|> cz.kksffn.player.APlayer
  cz.kksffn.player.AI o-- cz.kksffn.player.IStrategy : think
  cz.kksffn.player.APlayer .up.|> cz.kksffn.player.IPlayer
  cz.kksffn.player.APlayer o-- cz.kksffn.prepare.ISetShips : sea
  cz.kksffn.player.Human -up-|> cz.kksffn.player.APlayer
  cz.kksffn.player.Strategy .up.|> cz.kksffn.player.IStrategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
